--- a/myjob.yaml
+++ b/myjob.yaml
@@ -7,3 +7,7 @@
       command: date
     - name: List projects
       shell: ls src/*/*
+    - name: Check JSON syntax in anotherproject
+      shell: python -m json.tool *.json
+      args:
+        chdir: /src/github.com/jluk-codi-org/anotherproject
