--- a/myjob.yaml
+++ b/myjob.yaml
@@ -10,4 +10,4 @@
     - name: Check JSON syntax in anotherproject
       shell: python -m json.tool *.json
       args:
-        chdir: /src/github.com/jluk-codi-org/anotherproject
+        chdir: src/github.com/jluk-codi-org/anotherproject
