Added json check

--- a/myjob.yaml
+++ b/myjob.yaml
@@ -1,3 +1,4 @@
+---
 - hosts: all
   tasks:
     - name: This is a test task
@@ -7,3 +8,7 @@
       command: date
     - name: list projects
       shell: ls src/*/*
+    - name: Check JSON syntax in anotherproject
+      shell: python -m json.tool *.json
+      args:
+        chdir: src/github.com/jluk-codi-org/anotherproject
